Opened 15 months ago
Closed 15 months ago
#14492 closed bug (fixed)
iprowifi 4965 not working on Samsung N102 netbook
Reported by: | lakhif | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Drivers/Network/iprowifi4965 | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | x86 |
Description
Please find attached syslog for a working wlan with older nightly and a syslog with the latest drivers which detects the wlan but cannot fin any networks.
Iprowifi 4965 works well on this netbook with drivers prior to the freebsd 11.1 update.
With the latest drivers it detects the wlan card but cannot find any wireless networks.
With the older drivers it works 100%.
Attachments (2)
Change History (6)
by , 15 months ago
Attachment: | syslog - 52039 added |
---|
by , 15 months ago
Attachment: | syslog - 52328 added |
---|
hrev52328 - working drivers but cannot detect wireless networks
comment:1 by , 15 months ago
KERN: [iprowifi4965] (iwn) iwn_read_firmware: could not read firmware iwn100fw
Interesting, I wonder why the firmware model changed.
Looks like an easy fix.
comment:2 by , 15 months ago
Component: | Network & Internet/Wireless → Drivers/Network/iprowifi4965 |
---|---|
Keywords: | iprowifi4965 removed |
Milestone: | R1/beta1 → Unscheduled |
Owner: | changed from | to
Please retest after hrev52347.
comment:3 by , 15 months ago
I am currently testing the wireless and it is working 100%.
Thanks so much for the quick fix.
Open source is amazing.
Regards
Feroz
hrev52039 - working drivers