iprowifi4965: Add -100 firmware.

Should fix #14492.

Change-Id: If755bc1dc37f84da85cb0377a5e3105b89729735
Reviewed-on: https://review.haiku-os.org/570
Reviewed-by: waddlesplash <waddlesplash@gmail.com>